# Ludo-game

./: CONTRIBUTING.md  DEVELOPMENT_PLAN.md  LICENSE  Ludo_in_Colab.ipynb  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/cli/: main.py
apps/gui/: board_layout.py  constants.py  pygame_app.py
ludo/: board.py  dice.py  game.py  move.py  persistence.py  piece.py  player.py  rules.py  serialization.py  state.py
ludo/bots/: base.py  greedy_bot.py  human_bot.py  random_bot.py
ludo/utils/: constants.py
tests/: test_board.py  test_bots.py  test_cli.py  test_dice.py  test_game.py  test_game_cli.py  test_game_turns.py  test_gui_interaction_flow.py  test_human_bot.py  test_movement.py  test_packaging.py  test_persistence.py  test_rules.py  test_state.py  test_turns.py  test_winning.py
